fixed error message alignment in forms

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4238,7 +4238,7 @@ ADD NEW POST & EDIT POST PAGES
   border-color: #eed3d7;
   color: #b94a48;
   width: 507px;
-  margin: -10px 0 10px 0;
+  margin: -10px 0 10px 20px;
   -webkit-border-radius: 0 0 4px 4px;
   -moz-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px;
