--- a/public/less/forum.less
+++ b/public/less/forum.less
@@ -536,7 +536,7 @@ ADD NEW POST & EDIT POST PAGES
 			.alert;
 			.alert-error;
 			width: 507px;
-			margin: -10px 0 10px 0;
+			margin: -10px 0 10px 20px;
 			.border-radius(0 0 4px 4px);
 		}
 		
